--- a/index.html
+++ b/index.html
@@ -25,15 +25,62 @@
         </div>
 
         <section class="features">
-            Features
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-global"></use>
+                </svg>
+                <h4 class="heading-4--dark">World's best luxury homes</h4>
+                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eligendi vitae aliquid a corporis hic, nemo dolores neque culpa pariatur dolor magnam!</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-trophy"></use>
+                </svg>
+                <h4 class="heading-4--dark">Only the best properties</h4>
+                <p class="feature-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia optio sapiente fugit deserunt ex qui in.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <h4 class="heading-4--dark">All homes in top locations</h4>
+                <p class="feature-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam est deserunt unde temporibus, beatae quo et repellat!</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <h4 class="heading-4--dark">New home in one week</h4>
+                <p class="feature-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquam praesentium quod non eligendi sunt cum ipsum modi.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-presentation"></use>
+                </svg>
+                <h4 class="heading-4--dark">Top 1% realtors</h4>
+                <p class="feature-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-lock"></use>
+                </svg>
+                <h4 class="heading-4--dark">Secure payments on nexter</h4>
+                <p class="feature-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt distinctio repudiandae saepe dolores quis tempore similique.</p>
+            </div>
         </section>
 
         <div class="story__pictures">
-            Story pictures
+            <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="New house" class="story__img--2">
         </div>
 
         <div class="story__content">
-            Story content
+            <h3 class="heading-3 mb-sm">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+            <p class="story__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ut error magni quasi delectus debitis praesentium, iusto, explicabo natus deleniti corrupti, illo illum quidem dolores dolorum ipsum! Incidunt, eaque amet.
+            </p>
+            <button class="btn">Find your own home</button>
         </div>
 
         <section class="homes">
